# Qudoku

./: .gitignore  Readme
Code/: CMakeLists.txt  resources.qrc
Code/data/: example.txt
Code/i18n/: cs_CZ.qm  cs_CZ.ts  da_DK.qm  da_DK.ts  de_DE.qm  de_DE.ts  en_US.qm  en_US.ts  es_ES.qm  es_ES.ts  fi_FI.qm  fi_FI.ts  fr_FR.qm  fr_FR.ts  it_IT.qm  it_IT.ts  ja_JP.qm  ja_JP.ts  ko_KR.qm  ko_KR.ts  nb_NO.qm  nb_NO.ts  nl_NL.qm  nl_NL.ts  pl_PL.qm  pl_PL.ts  pt_BR.qm  pt_BR.ts  pt_PT.qm  pt_PT.ts  ru_RU.qm  ru_RU.ts  sv_SE.qm  sv_SE.ts  tr_TR.qm  tr_TR.ts  uk_UA.qm  uk_UA.ts  zh_CN.qm  zh_CN.ts
Code/include/: globals.h
Code/include/gui/: CandidatesGUI.h  DataDirDialog.h  MainGUI.h  QInputField.h  QLogTextBrowser.h  QStepsStack.h  SolvedGUI.h  StepByStepGUI.h  TechniquesDialog.h
Code/include/sudoku/: Field.h  HiddenSingle.h  HiddenSubset.h  NakedPair.h  NakedTriple.h  Step.h  Sudoku.h
Code/res/: Qudoku.rc
Code/src/: main.cpp
Code/src/gui/: CandidatesGUI.cpp  DataDirDialog.cpp  MainGUI.cpp  QInputField.cpp  QLogTextBrowser.cpp  QStepsStack.cpp  SolvedGUI.cpp  StepByStepGUI.cpp  TechniquesDialog.cpp
Code/src/sudoku/: Field.cpp  HiddenSingle.cpp  HiddenSubset.cpp  NakedPair.cpp  NakedTriple.cpp  Step.cpp  Sudoku.cpp
util/: createAppImage.sh  createDeb.sh  createInstaller.bat  createSetup.iss  getExePath.ps1
util/icons/: Qudoku.odg  SetupWizardImg.xcf  SetupWizardImgSmall.xcf  createIcons.sh  first.odg  last.odg  next.odg  prev.odg  uninstall.odg
